# scas_iotgpi_Wificommision

./: Makefile.am  WiFicommission.c  configure.ac
