dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([WiFicommission], 1.0)

AM_INIT_AUTOMAKE([1.9 foreign])
AC_CONFIG_HEADERS([config.h])
AC_PREFIX_DEFAULT([])

AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Init Libtool
LT_INIT()
AC_CONFIG_MACRO_DIR([m4])


AC_OUTPUT(Makefile )
